# syncope-messenger

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
CommonNetworking/: CMakeLists.txt
CommonNetworking/include/CommonNetworking/: Base.h  tcp_server.h
CommonNetworking/src/: Base.cpp  tcp_connection.cpp  tcp_server.cpp
Networking/: CMakeLists.txt
Networking/include/Log/: log.h
Networking/include/Networking/: chat_protocol.h  tcp_client.h  tcp_connection.h  tcp_server.h
Networking/include/Networking/client/: tcp_client.h
Networking/include/Networking/server/: tcp_connection.h  tcp_server.h
Networking/src/: Base.cpp  chat_protocol.cpp  log.cpp  tcp_client.cpp  tcp_connection.cpp  tcp_server.cpp
Networking/src/client/: tcp_client.cpp
Networking/src/server/: tcp_connection.cpp  tcp_server.cpp
SyncopeClient/: CMakeLists.txt  main.cpp  window.cpp  window.h
SyncopeServer/: CMakeLists.txt  main.cpp
docs/: protocol.md
